--- a/css/grid.css
+++ b/css/grid.css
@@ -869,35 +869,35 @@
   font-weight: 900;
 }
 .font-size-0-8 {
-  font-size: clamp(0.7rem, 0.8vw, 0.85rem);
+  font-size: clamp(0.7em, 0.8vw, 0.85em);
 }
 .font-size-0-9 {
-  font-size: clamp(0.8rem, 0.9vw, 0.95rem);
+  font-size: clamp(0.8em, 0.9vw, 0.95em);
 }
 .font-size-1 {
-  font-size: clamp(0.9rem, 1vw, 1.1rem);
+  font-size: clamp(0.9rem, 1vw, 1.1em);
 }
 .font-size-1-2 {
-  font-size: clamp(1rem, 1.2vw, 1.3rem);
+  font-size: clamp(1em, 1.2vw, 1em);
 }
 .font-size-1-5 {
-  font-size: clamp(1.2rem, 1.5vw, 1.8rem);
+  font-size: clamp(1.2em, 1.5vw, 1.4em);
 }
 .font-size-2 {
-  font-size: clamp(1.5rem, 2vw, 2.2rem);
+  font-size: clamp(1.5em, 2vw, 1.8em);
 }
 .font-size-2-5 {
-  font-size: clamp(1.8rem, 2.5vw, 2.8rem);
+  font-size: clamp(1.8em, 2.5vw, 2.4em);
 }
 
 .font-size-3 {
-  font-size: clamp(2.2rem, 3vw, 3.5rem);
+  font-size: clamp(2.2em, 3vw, 3em);
 }
 .font-size-3-2 {
-  font-size: clamp(2.5rem, 3.2vw, 4rem);
+  font-size: clamp(2.5em, 3.2vw, 4em);
 }
 .font-size-4 {
-  font-size: clamp(3rem, 4vw, 5rem);
+  font-size: clamp(3em, 4vw, 5em);
 }
 .font-normal {
   font-weight: normal;
