--- a/css/style.css
+++ b/css/style.css
@@ -584,7 +584,7 @@ body {
   padding: 24px;
   background: var(--color-block);
   border: 1px solid var(--color-border);
-  flex-grow: 1;
+  /*! flex-grow: 1; */
   border-radius: 24px;
   max-width: 100%;
   overflow: hidden;
@@ -663,7 +663,7 @@ body {
 .table-box table {
   border-collapse: separate;
   border-spacing: 0;
-  min-width: 900px;
+  min-width: max-content;
   display: block; /* Change to block to allow tbody scrolling independently */
 }
 .table-box thead {
@@ -845,10 +845,10 @@ th {
   text-transform: uppercase;
   letter-spacing: 0.025em;
   color: #64748b;
-  padding: 12px 20px;
+  padding: 12px 12px;
 }
 td {
-  padding: 18px 20px;
+  padding: 12px;
 }
 
 /* Define column widths for flex table layout */
