Disable height styles for responsive chart
Comment out height and min-height styles for chart.

--- a/css/style.css
+++ b/css/style.css
@@ -599,8 +599,8 @@ body {
 }
 @media screen and (max-width: 768px) {
   .chart {
-    height: 340px;
-    min-height: 340px !important;
+    /*! height: 340px; */
+    /*! min-height: 340px !important; */
     margin-top: 10px;
     margin-bottom: 10px;
   }
