--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@
     --color-scroll-thumb-hover: #94a3b8;
     --limon: #e29b21;
     --shadow-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-    --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    --shadow-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1);
+    --shadow-lg: 0 10px 20px -3px rgb(0 0 0 / 0.05);
 }
 
 [data-theme="dark"] {
@@ -663,18 +663,6 @@ body {
   .font-size-2 { font-size: 1.4rem !important; }
   .font-size-1-5 { font-size: 1.1rem !important; }
   .font-size-1-2 { font-size: 1rem !important; }
-
-  .chartbox .d-flex.gap-20 {
-    flex-direction: column;
-    gap: 15px;
-  }
-
-  .chartbox .d-flex.gap-20 > div {
-    border-bottom: 1px dashed var(--color-border);
-    padding-bottom: 10px;
-    width: 100%;
-  }
-
   .chartbox .d-flex.gap-20 > div:last-child {
     border-bottom: none;
     padding-bottom: 0;
@@ -695,10 +683,6 @@ body {
   flex: 1 1 300px;
 }
 
-.section .d-flex.gap-20 {
-  flex-wrap: wrap;
-}
-
 .block-card {
   padding: 24px;
   background: var(--color-block);
@@ -707,7 +691,7 @@ body {
   max-width: 100%;
   overflow: hidden;
   flex-grow: 1;
-  box-shadow: var(--shadow-md);
+  box-shadow: var(--shadow-lg);
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .block-card:hover {
@@ -724,10 +708,7 @@ body {
 }
 @media screen and (max-width: 768px) {
   .chart {
-    
     min-height: 250px !important;
-    margin-top: 10px;
-    margin-bottom: 10px;
   }
 }
 /* mode-toggle */
@@ -866,7 +847,6 @@ tbody tr {
 }
 tbody tr:hover {
   background: var(--color-hover) !important;
-  transform: scale(1.01);
   box-shadow: var(--shadow-sm);
   z-index: 5;
 }
@@ -887,21 +867,14 @@ td, th {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px;
-  margin: 0 -12px;
-  border-radius: 16px;
-  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 12px 0;
 }
 .coin-item:not(:last-child) {
   border-bottom: 1px solid var(--color-border);
 }
-.coin-item:hover {
-  background: var(--color-hover);
-  transform: translateX(-4px);
-}
 .coin-item .brand-logo {
-  width: 40px;
-  height: 40px;
+  width: 45px;
+  height: 45px;
   background: var(--color-white);
 }
 
@@ -975,7 +948,7 @@ td, th {
   background: rgba(var(--color-white-rgb), 0.7);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(var(--color-white-rgb), 0.1);
+  /*! border: 1px solid rgba(var(--color-white-rgb), 0.1); */
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .price-card:hover {
@@ -1102,6 +1075,7 @@ td, th {
   .block-card {
     padding: 16px 12px;
     border-radius: 20px;
+    box-shadow: unset
   }
   .coin-item {
     padding: 10px 8px;
