--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,11 @@
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  /* letter-spacing: -4%; */
 }
 :root {
   -webkit-writing-mode: horizontal-tb;
   -ms-writing-mode: rl-tb;
   writing-mode: horizontal-tb;
-  /*! direction: ltr; */
   text-orientation: mixed;
 
   --sidemenu-size: 250px;
@@ -41,7 +39,7 @@
     --color-body: #0f172a;
     --color-text: #94a3b8;
     --color-title: #f1f5f9;
-    --color-border: #1e293b;
+    --color-border: #303d51;
     --color-white: #1e293b;
     --color-white-rgb: 30, 41, 59;
     --color-block: #1e293b;
@@ -937,21 +935,10 @@ td, th {
 .price-card {
   position: relative;
   overflow: hidden;
-  background: rgba(var(--color-white-rgb), 0.7);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  /*! border: 1px solid rgba(var(--color-white-rgb), 0.1); */
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .price-card:hover {
-  transform: translateY(-5px);
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-}
-/* .price-card#gold-summary {
-  border-right: 1px solid #f59e0b;
-} */
-.price-card#silver-summary {
-  /*! border-right: 4px solid #94a3b8; */
 }
 .price-card::before {
   content: "";
