--- a/css/grid.css
+++ b/css/grid.css
@@ -256,7 +256,7 @@
   border-radius: 10px;
 }
 
-@media (max-width: 724px) {
+@media (max-width: 768px) {
   .three-item:first-child {
     -webkit-box-ordinal-group: 3;
     -ms-flex-order: 2;
@@ -852,8 +852,10 @@
   grid-auto-flow: column;
 }
 
-.order-0 {
-  order: -1;
+@media (max-width: 768px) {
+  .order-0 {
+    order: -1
+  }
 }
 .z-1 {
   z-index: 1;
