--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -73,7 +73,7 @@ img {
     display: block;
     max-width: 100%;
 }
-input {
+input , button {
     font-family: estedad;
 }
 body {
@@ -172,7 +172,8 @@ body {
     border-radius: 16px;
     flex-grow: 1;
     white-space: nowrap;
-border: 1px solid var(--color-border);
+    border: 1px solid var(--color-border);
+    flex-basis: 150px
 }
 .pd-md {
     padding: var(--pd-block);
@@ -298,6 +299,10 @@ input:focus {
 }
 .ml-05 { margin-left: 0.5rem; }
 
+.chart-box {
+    margin: 0 -12px;
+}
+
 /* Pill Toggle Group */
 .pill-toggle-group {
     display: flex;
@@ -324,6 +329,7 @@ input:focus {
     transition: all 0.2s ease;
     border: none;
     white-space: nowrap;
+    flex-grow: 1;
 }
 .pill-btn:hover {
     color: #1e293b;
