--- a/site/assets/css/grid.css
+++ b/site/assets/css/grid.css
@@ -600,7 +600,7 @@
 }
 .btn-primary {
     color: #fff;
-    background-color: var(--primary-color);
+    background-color: var(--color-primary);
     position: relative;
 }
 .btn-secondary {
