--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -173,7 +173,8 @@ body {
     flex-grow: 1;
     white-space: nowrap;
     border: 1px solid var(--color-border);
-    flex-basis: 185px
+    flex-basis: 185px;
+    min-width: 185px;
 }
 .pd-md {
     padding: var(--pd-block);
