--- a/new theme/assets/css/style.css
+++ b/new theme/assets/css/style.css
@@ -138,7 +138,7 @@ body {
     overflow: auto;
 }
 .center {
-    /*! max-width: 1400px; */
+    max-width: 1400px;
     margin: 0 auto;
     padding: var(--pd-block);
 }
