--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -72,6 +72,11 @@ strong {
 img {
     display: block;
     max-width: 100%;
+    color: transparent;
+}
+img[src=""],
+img:not([src]) {
+  visibility: hidden 
 }
 a {
     text-decoration: none
