--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -406,26 +406,29 @@ input:focus {
     line-height: 1.8;
 }
 .content-text p {
-    font-size: 1.15rem;
-    margin-bottom: 1.5rem;
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    line-height: 24px;
 }
 .content-text h1, .content-text h2, .content-text h3,
 .content-text h4, .content-text h5, .content-text h6 {
-    margin-top: 2rem;
-    margin-bottom: 1rem;
-    font-weight: 800;
+    /*! margin-top: 2rem; */
+    /*! margin-bottom: 1rem; */
+    /*! font-weight: 800; */
     color: var(--color-title);
 }
-.content-text h1 { font-size: 2rem; }
-.content-text h2 { font-size: 1.75rem; display: inline-block; padding-bottom: 5px; margin-bottom: 1.5rem; }
-.content-text h3 { font-size: 1.5rem; }
+.content-text h2 { font-size: 1.4rem; display: inline-block; }
+.content-text h3 { font-size: 1.2rem; }
 
 .content-text ol, .content-text ul {
     margin-right: 2rem;
-    margin-bottom: 1.5rem;
+    /*! margin-bottom: 1.5rem; */
 }
 .content-text li {
     margin-bottom: 0.5rem;
+}
+.content-text li p {
+    margin: 0 ;
 }
 .content-text blockquote {
     border-right: 4px solid var(--color-primary);
@@ -459,7 +462,7 @@ input:focus {
     border-collapse: collapse;
     display: table; /* Reset from potential block/flex */
 }
-.content-text table thead tr, .content-text table tr:first-child {
+.content-text table thead tr {
     background: var(--secondary-color);
 }
 .content-text table th, .content-text table td {
@@ -506,14 +509,14 @@ input:focus {
 /* Table of Contents Styling */
 .toc-container {
     background: var(--secondary-color);
-    padding: 1.5rem;
+    padding: var(--pd-block);
     border-radius: 16px;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     border: 1px solid var(--color-border);
 }
 .toc-title {
     font-size: 1.25rem;
-    font-weight: 800;
+    /*! font-weight: 800; */
     margin-bottom: 1rem;
     display: flex;
     align-items: center;
@@ -521,9 +524,9 @@ input:focus {
     color: var(--color-title);
 }
 .toc-list {
-    list-style: none;
+    list-style: ;
     padding: 0;
-    margin: 0;
+    margin: 0 20px 0 !important;
 }
 .toc-list li {
     margin-bottom: 0.5rem;
@@ -537,6 +540,7 @@ input:focus {
     text-decoration: none;
     transition: color 0.2s;
     display: block;
+    font-weight: 600;
 }
 .toc-list a:hover {
     color: var(--color-primary);
