--- a/site/assets/css/grid.css
+++ b/site/assets/css/grid.css
@@ -695,7 +695,7 @@
     overflow:hidden;
     cursor: pointer
 }
-.line-clamp-2 {
+.ellipsis-y line-clamp-2 {
     -webkit-line-clamp:2;
 }
 .line-clamp-3 {
