--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -6,8 +6,8 @@
 }
 :root {
     --color-body: #f1f5f9;
-    --color-primary: #c27803;
-    --color-primary-light: #e0a94d;
+    --color-primary: #249E94;
+    --color-primary-light: #249E9417;
     --color-secondary: #f1f5f9;
     --color-text: #475569;
     --color-title: #1C274C;
