--- a/site/assets/css/grid.css
+++ b/site/assets/css/grid.css
@@ -1,3 +1,27 @@
+.d-block {
+    display: block;
+}
+.d-inline {
+    display: inline;
+}
+.d-inline-block {
+    display: inline-block;
+}
+.d-grid {
+    display: grid;
+}
+.d-inline-grid {
+    display: inline-grid;
+}
+.d-table {
+    display: table;
+}
+.d-table-row {
+    display: table-row;
+}
+.d-table-cell {
+    display: table-cell;
+}
 .d-flex {
     display: flex;
 }
